added media queries and made the portfolio responsive depending on screen size

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <div class="project-card">
                         <div class="project-image-container">
                             <a href="https://github.com">
-                                <img class="project-image" src="assets/images/projects/template-project.jpg">
+                                <img class="project-image" src="assets/images/projects/movie-system-intro-screenshot.png">
                             </a>
                         </div>
                         <div class="about-project">
@@ -166,7 +166,7 @@
 
                     <div class="project-card">
                         <div class="project-image-container">
-                            <a href="https://github.com">
+                            <a href="https://github.com/ihni/movie-system">
                                 <img class="project-image" src="assets/images/projects/template-project.jpg">
                             </a>
                         </div>
