updated the regis site project image

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li>home</li>
-                <li>projects</li>
-                <li>more</li>
+            <ul class="nav-list">
+                <li class="nav-element">home</li>
+                <li class="nav-element">projects</li>
+                <li class="nav-element">more</li>
             </ul>
         </nav>
     </header>
@@ -145,14 +145,14 @@
                 <section class="projects-container">
                     <div class="project-card">
                         <div class="project-image-container">
-                            <a href="https://github.com">
-                                <img class="project-image" src="assets/images/projects/movie-system-intro-screenshot.png">
+                            <a href="https://github.com/ihni/movie-system">
+                                <img class="project-image" src="assets/images/projects/movie-system-demo.png">
                             </a>
                         </div>
                         <div class="about-project">
-                            <h3 class="project-title-card">Student Registration System</h3>
+                            <h3 class="project-title-card">Movie Booking Application</h3>
                             <div class="project-description">
-                                <p>Application for keeping track of student records, designed for system administrators.</p>
+                                <p>A CLI project for DSA that implements data-structures and algorithms to book seats for a theatre for various movies.</p>
                             </div>
                         </div>
                         <div class="tech-stack-used-for-project">
@@ -173,7 +173,34 @@
                         <div class="about-project">
                             <h3 class="project-title-card">Registration Website</h3>
                             <div class="project-description">
-                                <p>My first project when it comes to full-stack development.</p>
+                                <p>My first full-stack project showcasing auths, registering and keeping track of users, and role-specific pages</p>
+                            </div>
+                        </div>
+                        <div class="tech-stack-used-for-project">
+                            <div class="tech-project-container">
+                                <div class="technology-of-project">
+                                    PHP
+                                </div>
+                                <div class="technology-of-project">
+                                    MySQL
+                                </div>
+                                <div class="technology-of-project">
+                                    Apache
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="project-card">
+                        <div class="project-image-container">
+                            <a href="https://github.com/ihni/movie-system">
+                                <img class="project-image" src="assets/images/projects/regis-web-card.png">
+                            </a>
+                        </div>
+                        <div class="about-project">
+                            <h3 class="project-title-card">Registration Website</h3>
+                            <div class="project-description">
+                                <p>My first full-stack project showcasing auths, registering and keeping track of users, and role-specific pages</p>
                             </div>
                         </div>
                         <div class="tech-stack-used-for-project">
