replaced apache with raspberry and removed tech name and description when screen width is 480px

--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
                         </div>
                     </div>
                     <div class="tech-container">
-                        <div style="background-color: #ec5cff33; " class="image-container">
-                            <img class="tech-icon" src="assets/images/tech-stack/apache-icon.png">
+                        <div style="background-color: #ff509933; " class="image-container">
+                            <img class="tech-icon" src="assets/images/tech-stack/pi-icon.png">
                         </div>
                         <div>
-                            <h4 class="tech-name">Apache</h4>
-                            <p class="tech-description">Web Server</p>
+                            <h4 class="tech-name">Raspberry Pi</h4>
+                            <p class="tech-description">Embedded Systems</p>
                         </div>
                     </div>
                     <div class="tech-container">
@@ -166,7 +166,7 @@
 
                     <div class="project-card">
                         <div class="project-image-container">
-                            <a href="https://github.com/ihni/movie-system">
+                            <a href="https://github.com/ihni/php-fullstack-website">
                                 <img class="project-image" src="assets/images/projects/regis-web-card.png">
                             </a>
                         </div>
@@ -186,6 +186,9 @@
                                 </div>
                                 <div class="technology-of-project">
                                     Apache
+                                </div>
+                                <div class="technology-of-project">
+                                    TailwindCSS
                                 </div>
                             </div>
                         </div>
