added two more cards

--- a/index.html
+++ b/index.html
@@ -143,6 +143,32 @@
                     </a>
                 </div>
                 <section class="projects-container">
+
+                    <div class="project-card">
+                        <div class="project-image-container">
+                            <a href="https://github.com/ihni/student-regis">
+                                <img class="project-image" src="assets/images/projects/student-regis-card.png">
+                            </a>
+                        </div>
+                        <div class="about-project">
+                            <h3 class="project-title-card">Student Registration System</h3>
+                            <div class="project-description">
+                                <p>A tkinter-based application for registering and managing users across the system</p>
+                            </div>
+                        </div>
+                        <div class="tech-stack-used-for-project">   
+                            <div class="tech-project-container">
+                                <div class="technology-of-project">
+                                    Python
+                                </div>
+                                <div class="technology-of-project">
+                                    Tkinter
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    
                     <div class="project-card">
                         <div class="project-image-container">
                             <a href="https://github.com/ihni/movie-system">
@@ -159,6 +185,27 @@
                             <div class="tech-project-container">
                                 <div class="technology-of-project">
                                     Python
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="project-card">
+                        <div class="project-image-container">
+                            <a href="https://github.com/ihni/portfolio">
+                                <img class="project-image" src="assets/images/projects/portfolio-card.png">
+                            </a>
+                        </div>
+                        <div class="about-project">
+                            <h3 class="project-title-card">Portfolio</h3>
+                            <div class="project-description">
+                                <p>About me, my resume, my interests, and my portfolio, hosted on github pages</p>
+                            </div>
+                        </div>
+                        <div class="tech-stack-used-for-project">   
+                            <div class="tech-project-container">
+                                <div class="technology-of-project">
+                                    Github Pages
                                 </div>
                             </div>
                         </div>
@@ -193,6 +240,7 @@
                             </div>
                         </div>
                     </div>
+
                 </section>
             </section>
 
