created a projects page using the same template from index, current WIP

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <header>
         <nav>
             <ul class="nav-list">
-                <li class="nav-element">home</li>
-                <li class="nav-element">projects</li>
-                <li class="nav-element">more</li>
+                <a href="index.html"><li class="nav-element">home</li></a>
+                <a href="projects.html"><li class="nav-element">projects</li></a>
+                <a href="wip.html"><li class="nav-element">more</li></a>
             </ul>
         </nav>
     </header>
