--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <header>
         <nav>
             <ul class="nav-list">
-                <a href="index.html"><li class="nav-element">home</li></a>
-                <a href="projects.html"><li class="nav-element">projects</li></a>
-                <a href="wip.html"><li class="nav-element">more</li></a>
+                <a href="index.html"><li>home</li></a>
+                <a href="projects.html"><li>projects</li></a>
+                <a href="wip.html"><li>more</li></a>
             </ul>
         </nav>
     </header>
@@ -36,7 +36,7 @@
                 <div class="introduction-container">
                     <h1 class="title-text">Hi, I'm Aidan 👋</h1>
                     <p class="location-text">📍Philippines</p>
-                    <p class="description-text">I'm a computer science student with in interest in OS-Development!</p>
+                    <p class="description-text">I'm a computer science student with in interest in OS-Development and embedded systems!</p>
                     <section class="contacts">
                         <a target="_blank" href="resume.pdf"><button class="resume-button">
                             <span style="font-weight: 600;">Resume</span>
@@ -246,5 +246,27 @@
 
         </article>
     </main>
+
+    <footer>
+        <div class="footer-container">
+            <section class="footer-icons">
+                <a href="https://github.com/ihni/" target="_blank">
+                    <img src="assets/images/github-icon.png" alt="Github Icon">
+                </a>
+                <a href="https://linkedin.com/" target="_blank">
+                    <img src="assets/images/linkedin-icon-nocolor.png" alt="LinkedIn Icon">
+                </a>
+            </section>
+            <section class="footer-text">
+                <p>
+                    <span>© 2024</span>
+                    <a href="#">ihni.github.io/portfolio</a>
+                    <span class="separator">|</span>
+                    <a href="#">Privacy?</a>
+                </p>
+            </section>
+        </div>
+    </footer>
+    
 </body>
 </html>
