--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul class="nav-list">
                 <a href="index.html"><li>home</li></a>
                 <a href="projects.html"><li>projects</li></a>
-                <a href="wip.html"><li>more</li></a>
+                <a target="_blank" href="https://mikudb.moe/album/draw/"><li>more</li></a>
             </ul>
         </nav>
     </header>
@@ -137,7 +137,7 @@
 
             <section class="projects-wrapper">
                 <div class="project-header-container">
-                    <h2 class="project-title-text">My Projects</h2>
+                    <h2 class="project-title-text">Featured Projects</h2>
                     <a class="view-more-projects">
                         view more
                     </a>
@@ -147,7 +147,7 @@
                     <!-- Student Registration System -->
                     <div class="project-card">
                         <div class="project-image-container">
-                            <a href="https://github.com/ihni/student-regis">
+                            <a target="_blank" href="https://github.com/ihni/student-regis">
                                 <img class="project-image" src="assets/images/projects/student-regis-card.png">
                             </a>
                         </div>
@@ -167,7 +167,7 @@
                                 </div>
                             </div>
                             <div class="tech-demo-wrapper">
-                                <a><div class="tech-demo-container">
+                                <a target="_blank" href="https://github.com/ihni/student-regis"><div class="tech-demo-container">
                                     <img src="assets/images/github-icon.svg" alt="GitHub Icon">
                                     Source
                                 </div></a>
@@ -179,7 +179,7 @@
                     <!-- Movie Booking Application -->
                     <div class="project-card">
                         <div class="project-image-container">
-                            <a href="https://github.com/ihni/movie-system">
+                            <a target="_blank" href="https://github.com/ihni/movie-system">
                                 <img class="project-image" src="assets/images/projects/movie-system-demo.png">
                             </a>
                         </div>
@@ -196,7 +196,7 @@
                                 </div>
                             </div>
                             <div class="tech-demo-wrapper">
-                                <a><div class="tech-demo-container">
+                                <a target="_blank" href="https://github.com/ihni/movie-system"><div class="tech-demo-container">
                                     <img src="assets/images/github-icon.svg" alt="GitHub Icon">
                                     Source
                                 </div></a>
@@ -208,7 +208,7 @@
                     <!-- Portfolio -->
                     <div class="project-card">
                         <div class="project-image-container">
-                            <a href="https://github.com/ihni/portfolio">
+                            <a target="_blank" href="https://github.com/ihni/portfolio">
                                 <img class="project-image" src="assets/images/projects/portfolio-card.png">
                             </a>
                         </div>
@@ -225,7 +225,7 @@
                                 </div>
                             </div>
                             <div class="tech-demo-wrapper">
-                                <a href="https://ihni.github.io/portfolio/"><div class="tech-demo-container">
+                                <a target="_blank" href="https://ihni.github.io/portfolio/"><div class="tech-demo-container">
                                     <img src="assets/images/globe-icon.svg" alt="Globe Icon" class="icon">
                                     Website
                                 </div></a>
@@ -237,7 +237,7 @@
                     <!-- Registration Website -->
                     <div class="project-card">
                         <div class="project-image-container">
-                            <a href="https://github.com/ihni/php-fullstack-website">
+                            <a target="_blank" href="https://github.com/ihni/php-fullstack-website">
                                 <img class="project-image" src="assets/images/projects/regis-web-card.png">
                             </a>
                         </div>
@@ -264,7 +264,7 @@
                             </div>
 
                             <div class="tech-demo-wrapper">
-                                <a href="https://github.com/ihni/php-fullstack-website"><div class="tech-demo-container">
+                                <a target="_blank" href="https://github.com/ihni/php-fullstack-website"><div class="tech-demo-container">
                                     <img src="assets/images/github-icon.svg" alt="GitHub Icon">
                                     Source
                                 </div></a>
@@ -292,9 +292,9 @@
             <section class="footer-text">
                 <p>
                     <span>© 2024</span>
-                    <a href="#">ihni.github.io/portfolio</a>
+                    <a href="index.html">ihni.github.io/portfolio</a>
                     <span class="separator">|</span>
-                    <a href="#">Privacy?</a>
+                    <a target="_blank" href="https://mikudb.moe/album/draw/">draw album</a>
                 </p>
             </section>
         </div>
