fixed projects page, forgot to include footer and fixed the closing tags

--- a/projects.html
+++ b/projects.html
@@ -166,8 +166,28 @@
                         </div>
                     </div>
                     <!-- -------- -->
-
                 </section>
+            </section>
+        </article>
+    </main>
+
+    <footer>
+        <div class="footer-container">
+            <section class="footer-icons">
+                <a href="https://github.com/ihni/" target="_blank">
+                    <img src="assets/images/github-icon.png" alt="Github Icon">
+                </a>
+                <a href="https://linkedin.com/" target="_blank">
+                    <img src="assets/images/linkedin-icon-nocolor.png" alt="LinkedIn Icon">
+                </a>
+            </section>
+            <section class="footer-text">
+                <p>
+                    <span>© 2024</span>
+                    <a href="index.html">ihni.github.io/portfolio</a>
+                    <span class="separator">|</span>
+                    <a target="_blank" href="https://mikudb.moe/album/draw/">draw album</a>
+                </p>
             </section>
         </div>
     </footer>
