changed cards for updated repo name and removed links in more and footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>My Portfolio</title>
+    <title>About me</title>
 
     <style>
     
@@ -25,7 +25,7 @@
             <ul class="nav-list">
                 <a href="index.html"><li>home</li></a>
                 <a href="projects.html"><li>projects</li></a>
-                <a target="_blank" href="https://mikudb.moe/album/draw/"><li>more</li></a>
+                <a href="#"><li>more</li></a>
             </ul>
         </nav>
     </header>
@@ -144,15 +144,15 @@
                 </div>
                 <section class="projects-container">
                     
-                    <!-- Student Registration System -->
+                    <!-- Student Management System -->
                     <div class="project-card">
                         <div class="project-image-container">
-                            <a target="_blank" href="https://github.com/ihni/student-regis">
-                                <img class="project-image" src="assets/images/projects/student-regis-card.png">
+                            <a target="_blank" href="https://github.com/ihni/student-management-sys">
+                                <img class="project-image" src="assets/images/projects/student-sys-card.png">
                             </a>
                         </div>
                         <div class="about-project">
-                            <h3 class="project-title-card">Student Registration System</h3>
+                            <h3 class="project-title-card">Student Management System</h3>
                             <div class="project-description">
                                 <p>A tkinter-based application for registering and managing users across the system</p>
                             </div>
@@ -163,71 +163,13 @@
                                     Python
                                 </div>
                                 <div class="technology-of-project">
-                                    Tkinter
+                                    CTkinter
                                 </div>
                             </div>
                             <div class="tech-demo-wrapper">
                                 <a target="_blank" href="https://github.com/ihni/student-regis"><div class="tech-demo-container">
                                     <img src="assets/images/github-icon.svg" alt="GitHub Icon">
                                     Source
-                                </div></a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- -------- -->
-
-                    <!-- Movie Booking Application -->
-                    <div class="project-card">
-                        <div class="project-image-container">
-                            <a target="_blank" href="https://github.com/ihni/movie-system">
-                                <img class="project-image" src="assets/images/projects/movie-system-demo.png">
-                            </a>
-                        </div>
-                        <div class="about-project">
-                            <h3 class="project-title-card">Movie Booking Application</h3>
-                            <div class="project-description">
-                                <p>A CLI project for DSA that implements data-structures and algorithms to book seats for a theatre for various movies.</p>
-                            </div>
-                        </div>
-                        <div class="tech-stack-used-for-project">
-                            <div class="tech-project-container">
-                                <div class="technology-of-project">
-                                    Python
-                                </div>
-                            </div>
-                            <div class="tech-demo-wrapper">
-                                <a target="_blank" href="https://github.com/ihni/movie-system"><div class="tech-demo-container">
-                                    <img src="assets/images/github-icon.svg" alt="GitHub Icon">
-                                    Source
-                                </div></a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- -------- -->
-
-                    <!-- Portfolio -->
-                    <div class="project-card">
-                        <div class="project-image-container">
-                            <a target="_blank" href="https://github.com/ihni/portfolio">
-                                <img class="project-image" src="assets/images/projects/portfolio-card.png">
-                            </a>
-                        </div>
-                        <div class="about-project">
-                            <h3 class="project-title-card">Portfolio</h3>
-                            <div class="project-description">
-                                <p>About me, my resume, my interests, and my portfolio, hosted on github pages</p>
-                            </div>
-                        </div>
-                        <div class="tech-stack-used-for-project">   
-                            <div class="tech-project-container">
-                                <div class="technology-of-project">
-                                    Github Pages
-                                </div>
-                            </div>
-                            <div class="tech-demo-wrapper">
-                                <a target="_blank" href="https://ihni.github.io/portfolio/"><div class="tech-demo-container">
-                                    <img src="assets/images/globe-icon.svg" alt="Globe Icon" class="icon">
-                                    Website
                                 </div></a>
                             </div>
                         </div>
@@ -294,7 +236,7 @@
                     <span>© 2024</span>
                     <a href="index.html">ihni.github.io/portfolio</a>
                     <span class="separator">|</span>
-                    <a target="_blank" href="https://mikudb.moe/album/draw/">draw album</a>
+                    <a href="#">about me</a>
                 </p>
             </section>
         </div>
