--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>My Projects</title>
+    <title>Projects</title>
 
     <style>
     
@@ -25,7 +25,7 @@
             <ul class="nav-list">
                 <a href="index.html"><li>home</li></a>
                 <a href="projects.html"><li>projects</li></a>
-                <a target="_blank" href="https://mikudb.moe/album/draw/"><li>more</li></a>
+                <a href="#"><li>more</li></a>
             </ul>
         </nav>
     </header>
@@ -38,15 +38,15 @@
                 </div>
                 <section class="projects-container">
                     
-                    <!-- Student Registration System -->
+                    <!-- Student Management System -->
                     <div class="project-card">
                         <div class="project-image-container">
-                            <a target="_blank" href="https://github.com/ihni/student-regis">
-                                <img class="project-image" src="assets/images/projects/student-regis-card.png">
+                            <a target="_blank" href="https://github.com/ihni/student-management-sys">
+                                <img class="project-image" src="assets/images/projects/student-sys-card.png">
                             </a>
                         </div>
                         <div class="about-project">
-                            <h3 class="project-title-card">Student Registration System</h3>
+                            <h3 class="project-title-card">Student Management System</h3>
                             <div class="project-description">
                                 <p>A tkinter-based application for registering and managing users across the system</p>
                             </div>
@@ -57,7 +57,7 @@
                                     Python
                                 </div>
                                 <div class="technology-of-project">
-                                    Tkinter
+                                    CTkinter
                                 </div>
                             </div>
                             <div class="tech-demo-wrapper">
@@ -186,7 +186,7 @@
                     <span>© 2024</span>
                     <a href="index.html">ihni.github.io/portfolio</a>
                     <span class="separator">|</span>
-                    <a target="_blank" href="https://mikudb.moe/album/draw/">draw album</a>
+                    <a href="#">about me</a>
                 </p>
             </section>
         </div>
