replaced postgres with mariadb

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="introduction-container">
                     <h1 class="title-text">Hi, I'm Aidan 👋</h1>
                     <p class="location-text">📍Philippines</p>
-                    <p class="description-text">I'm a computer science student with in interest in OS-Development and embedded systems!</p>
+                    <p class="description-text">I'm a computer science student with in interest in OS-Development and Cybersecurity!</p>
                     <section class="contacts">
                         <a target="_blank" href="resume.pdf"><button class="resume-button">
                             <span style="font-weight: 600;">Resume</span>
@@ -88,8 +88,8 @@
                         </div>
                     </div>
                     <div class="tech-container">
-                        <div style="background-color: rgba(67, 155, 255, 0.2); " class="image-container">
-                            <img class="tech-icon" src="assets/images/tech-stack/postgresql-icon.png">
+                        <div style="background-color: rgba(255, 214, 67, 0.2); " class="image-container">
+                            <img class="tech-icon" src="assets/images/tech-stack/mariadb-icon.svg">
                         </div>
                         <div>
                             <h4 class="tech-name">PostgreSQL</h4>
